--- a/二叉树健康系统/二叉树健康系统.vcxproj
+++ b/二叉树健康系统/二叉树健康系统.vcxproj
@@ -184,6 +184,9 @@
   <ItemGroup>
     <ClInclude Include="Btree.hpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="main.cpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
