--- a/图/图.vcxproj
+++ b/图/图.vcxproj
@@ -133,6 +133,10 @@
   <ItemGroup>
     <ClCompile Include="Adjacency_List_Graph.cpp" />
     <ClCompile Include="adjacency_Matrix.cpp" />
+    <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="11.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
