--- a/图/图.vcxproj.filters
+++ b/图/图.vcxproj.filters
@@ -29,5 +29,13 @@
     <ClCompile Include="Adjacency_List_Graph.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="11.txt">
+      <Filter>资源文件</Filter>
+    </Text>
   </ItemGroup>
 </Project>
